SDKs/twilio.com/twilio_pricing_v2/1.37.4/java/README.md
# openapisdk

<!-- Start SDK Installation -->
## SDK Installation

### Gradle

```groovy
implementation 'openapisdk:openapisdk:0.0.1'
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            SDK sdk = builder.build();

            FetchTrunkingCountryRequest req = new FetchTrunkingCountryRequest() {{
                security = new FetchTrunkingCountrySecurity() {{
                    accountSidAuthToken = new SchemeAccountSidAuthToken() {{
                        password = "YOUR_PASSWORD_HERE";
                        username = "YOUR_USERNAME_HERE";
                    }};
                }};
                pathParams = new FetchTrunkingCountryPathParams() {{
                    isoCountry = "nihil";
                }};
            }};

            FetchTrunkingCountryResponse res = sdk.fetchTrunkingCountry(req);

            if (res.pricingV2TrunkingCountryInstance.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `fetchTrunkingCountry` - Fetch a specific Country.
* `fetchTrunkingNumber` - Fetch pricing information for a specific destination and, optionally, origination phone number.
* `fetchVoiceCountry` - Fetch a specific Country.
* `fetchVoiceNumber` - Fetch pricing information for a specific destination and, optionally, origination phone number.
* `listTrunkingCountry`
* `listVoiceCountry`

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
